fixed z-index

--- a/src/components/PokemonList.css
+++ b/src/components/PokemonList.css
@@ -14,6 +14,7 @@
 }
 
 .pokedex {
+    z-index: 22;
     position: absolute;
     top: 0;
     width: 100%;
